# Parallelism-Theory-Tasks

./: .gitignore  pyproject.toml  test.txt
classwork/: hello.c
task1/: CMakeLists.txt  README.md  main.cpp
task2/: plots.ipynb
task2/dgemv/: CMakeLists.txt  build_plot.py  dgemv.cpp  dgemv_time.csv
task2/integrate/: CMakeLists.txt  build_plot.py  integrate.cpp  integrate_time.csv
task2/slae/: CMakeLists.txt  build_plot.py  slae.cpp  slae_dynamic.csv  slae_guided.csv  slae_multiple_blocks.csv  slae_schedule.cpp  slae_section.cpp  slae_single_block.csv  slae_static_k.csv  slae_time.csv
task3/: plots.ipynb
task3/client_server_app/: CMakeLists.txt  pow_results.csv  sin_results.csv  sqrt_results.csv
task3/client_server_app/include/: server.hpp
task3/client_server_app/src/: main.cpp
task3/client_server_app/tests/: test_results.cpp
task3/dgemv/: CMakeLists.txt  dgemv.cpp  dgemv_time.csv
task4/: main.py  test.py  ui.py
task5/: main.py
